--- a/example/index.html
+++ b/example/index.html
@@ -5,13 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>A simple SPA framework.</title>
-        <script src="/js/wand.js"></script>
+        <script src="/js/wand.js?abcdafagwgdyusqi"></script>
+        <script src="/js/wand.extensions.js?saduhgqiduhsudgsuadgyw"></script>
     </head>
     <body>
         <div id="main">
             <h1>Welcome to wand.js!</h1>
             <a href="subpage.html">subpage</a>
         </div>
-        <script>wand('#main')</script>
+        <script>
+            wand('#main')
+            var fe = new extensions.FadeExtension();
+        </script>
     </body>
 </html>
